Nuevos cambios: furniture, pet_friendly, roomate, tipoAirbnb
